--- a/views/product3.html
+++ b/views/product3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urban Style Cap</title>
-    <link rel="stylesheet" href="css/details.css">
-    <script src="js/scriptdetails.js"></script>
+    <link rel="stylesheet" href="/css/details.css">
+    <script src="/js/details.js"></script>
 </head>
 <body>
     <div class="status-bar">
@@ -18,9 +18,11 @@
       </div>
 
   <div class="product-image-container">
-      <img src="images/img3.png" alt="" class="product-image">
+      <img src="/storage/images/img3.png" alt="" class="product-image">
       <div class="nav-buttons">
-        <button class="back-button" aria-label="Volver">&larr;</button>
+        <a href="/index.html">
+          <button class="back-button" aria-label="Volver">&larr;</button>
+        </a>
       <div class="favorite-button">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"></path>
