--- a/views/checkout.html
+++ b/views/checkout.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Compras</title>
-    <link rel="stylesheet" href="css/buy.css">
-    <script src="js/buyscript.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="/css/checkout.css">
+    <script src="/js/checkout.js"></script>
 </head>
 <body>
     <div class="container">
@@ -19,7 +18,9 @@
             </div>
 
             <div class="header">
-                <button class="back-button">←</button>
+                <a href="/index.html">
+                    <button class="back-button">←</button>
+                </a>
                 <h1>Checkout</h1>
                 <button class="menu-button">≡</button>
             </div>
@@ -27,7 +28,7 @@
             <div class="cart-items">
                 <div class="cart-item">
                     <div class="item-image">
-                        <img src="images/img1.png" alt="Modern light clothes">
+                        <img src="/storage/images/img1.png" alt="Modern light clothes">
                     </div>
                     <div class="item-details">
                         <div class="item-title">Modern light clothes</div>
@@ -46,7 +47,7 @@
 
                 <div class="cart-item">
                     <div class="item-image">
-                        <img src="images/img2.png" alt="Modern light clothes">
+                        <img src="/storage/images/img2.png" alt="Modern light clothes">
                     </div>
                     <div class="item-details">
                         <div class="item-title">Light Dress Bliss</div>
@@ -95,11 +96,13 @@
             </div>
 
             <div class="button-container">
-                <button class="pay-button">Pay</button>
+                <button id="pay-button" class="pay-button">Pagar</button>
             </div>
 
             <div class="spacer"></div>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
