--- a/views/product2.html
+++ b/views/product2.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Light Clothes</title>
+    <title>Light Dress Bless</title>
     <link rel="stylesheet" href="/css/details.css">
     <script src="/js/details.js"></script>
 </head>
 <body>
-    <div class="status-bar">
-        <span>9:41</span>
-        <div>
-          <span>&#9650;</span>
-          <span>&#9650;&#9650;</span>
-          <span>&#9635;</span>
-        </div>
-      </div>
-
   <div class="product-image-container">
       <img src="/storage/images/img2.png" alt="" class="product-image">
       <div class="nav-buttons">
@@ -32,7 +23,7 @@
     </div>
     
     <div class="product-info">
-      <h1 class="product-title">Modern Light Clothes</h1>
+      <h1 class="product-title">Light Dress Bless</h1>
       
       <div class="ratings">
         <span class="star">&#9733;</span>
