--- a/views/product1.html
+++ b/views/product1.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light Dress Bless</title>
+    <title>Modern Light Clothes</title>
     <script src="/js/details.js"></script>
     <link rel="stylesheet" href="/css/details.css">
 </head>
 <body>
-        <div class="status-bar">
-          <span>9:41</span>
-          <div>
-            <span>&#9650;</span>
-            <span>&#9650;&#9650;</span>
-            <span>&#9635;</span>
-          </div>
-        </div>
-
     <div class="product-image-container">
         <img src="/storage/images/img1.png" alt="" class="product-image">
         <div class="nav-buttons">
@@ -32,7 +23,7 @@
       </div>
       
       <div class="product-info">
-        <h1 class="product-title">Light Dress Bless</h1>
+        <h1 class="product-title">Modern Light Clothes</h1>
         
         <div class="ratings">
           <span class="star">&#9733;</span>
